--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,10 +19,9 @@
           <% if @user.avatar.present? %>
             <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
           <% else %>
-            <%= image_tag "https://images.unsplash.com/photo-1505562130589-9879683e72da?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+            <%= image_tag "http://diazworld.com/images/avatar-placeholder.png", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <!-- <a class="dropdown-item" href="#">view profile</a> -->
             <%= link_to "view profile", user_path(@user), class: 'dropdown-item'  %>
             <a class="dropdown-item" href="#">settings</a>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
