changed price to integer type on scooter, User can only be able to book if it's available

--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -20,6 +20,7 @@
             <h5 class="card-title"><%= scooter.name %></h5>
             <p class="card-text description"><%= scooter.description %></p>
             <p><strong>Rp <%= scooter.price %></strong></p>
+            <p><%= scooter.status %></p>
           </div>
           <div class="card-actions">
             <%= link_to "More info", scooter_path(scooter), class: 'action text-primary'  %>
