--- a/app/views/scooters/_form.html.erb
+++ b/app/views/scooters/_form.html.erb
@@ -6,5 +6,5 @@
   <%= f.input :photo %>
   <%= f.input :price %>
   <%= f.input :photo_cache, as: :hidden %>
-  <%= f.submit class: 'btn btn-primary' %>
+  <%= f.submit class: 'btn sign-up' %>
 <% end %>
