fixed index info window

--- a/app/views/scooters/_infowindow.html.erb
+++ b/app/views/scooters/_infowindow.html.erb
@@ -1,2 +1,2 @@
-<h3><%= @scooter.name %></h3>
-<h5><%= @scooter.location %></h5>
+<h3 style="font-size: 1.5rem; margin: 0 !important"><%= @scooter.name %></h3>
+<h5 style="font-size: 1rem;"><%= @scooter.location %></h5>
