--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,8 @@
   <p>Rentscootscoot.co is incorporated in Bali and operates since early 2019. </p>
     <h6>Our details:</h6>
   <div class="list-group-item col-xs-12 nopadding_side">
-    <p>Company name: rentscootcoot.co</p>
-    <p>Address: Canggu,Bali</p>
+    <p>Company name: <a href="#" id="company">rentscootcoot.co</a></p>
+    <p>Address: Canggu, Bali</p>
   </div>
   <h2 class="text-one">3 easy steps to rent your scooter</h2>
   <div class="card-description">
@@ -38,8 +38,6 @@
     </div>
   </div>
   <div class="button-holder">
-    <!-- <div class="btn-description"> -->
       <%= link_to "See all scooters", scooters_path, class: 'btn sign-up' %>
-    <!-- </div> -->
   </div>
 </div>
