--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,6 +6,7 @@
   position: fixed;
   z-index: 1;
   width: 100%;
+  padding: 4px 0;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -56,4 +57,12 @@
   &:hover {
     color: #E28646 !important;
   }
+}
+
+.navbar .right-btns {
+  margin-right: 8px !important;
+}
+
+.left-logo {
+  margin-left: 10px !important;
 }
