--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -1,31 +1,30 @@
-<div class="container index-list">
+<div class="index-list">
   <h2 class="list-title">Scooter List</h2>
-  <% if policy(Scooter).new? %>
-    <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up' %>
-  <% end %>
-  <div class="scooters">
+  <div class="text-center">
+    <% if policy(Scooter).new? %>
+      <%= link_to 'Add a Scooter', new_scooter_path, class: 'btn sign-up mb-5' %>
+    <% end %>
+  </div>
+
+  <div class="main-container">
     <div
       id="all-map"
-      class="mt-3"
-      style="width: 100%;
-      height: 600px;"
       data-markers="<%= @markers.to_json %>"
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
-    <div class="row my-5">
+
+    <div class="cards row">
       <% @scooters.each do |scooter| %>
-        <div class="col-12 col-lg-4 col-md-6">
-          <div class="card" style="width: 18rem;">
-            <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top', width: 400, height: 200 %>
-            <div class="card-body">
-              <h5 class="card-title"><%= scooter.name %></h5>
-              <p class="card-text description"><%= scooter.description %></p>
-              <p><strong>Rp <%= scooter.price %></strong></p>
-              <p><%= scooter.status %></p>
-            </div>
-            <div class="card-actions">
-              <%= link_to "More info", scooter_path(scooter), class: 'action text-primary'  %>
-            </div>
+        <div class="card col-sm-4">
+          <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top mt-3',height: 200 %>
+          <div class="card-body">
+            <h5 class="card-title"><%= scooter.name %></h5>
+            <p class="card-text description"><%= scooter.description %></p>
+            <p><strong>Rp <%= scooter.price %></strong></p>
+            <p><%= scooter.status %></p>
+          </div>
+          <div class="card-actions">
+            <%= link_to "More info", scooter_path(scooter), class: 'action text-primary'  %>
           </div>
         </div>
       <% end %>
