--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <a class="navbar-brand" href="/">
+  <a class="navbar-brand left-logo" href="/">
     <i class="fas fa-motorcycle">&nbsp;</i>rentscootscoot
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,7 +8,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <% if user_signed_in? %>
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto right-btns">
         <li class="nav-item">
           <a class="nav-link" href="/bookings">my bookings</a>
         </li>
