--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -77,13 +77,13 @@ h2 {
 
 .index-list {
   margin-top: 5rem;
+  margin-bottom: 5rem;
   min-height: 100vh;
 }
 
 .main-container {
   display: flex;
   justify-content: space-between;
-  overflow: hidden;
 }
 
 .list-title {
