--- a/app/views/scooters/index.html.erb
+++ b/app/views/scooters/index.html.erb
@@ -13,15 +13,15 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div>
 
-    <div class="cards row">
+    <div class="cards">
       <% @scooters.each do |scooter| %>
-        <div class="card col-sm-4">
-          <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top mt-3',height: 200 %>
+        <div class="card">
+          <%= cl_image_tag scooter.photo, alt: scooter.name, class: 'card-img-top',height: 200 %>
           <div class="card-body">
             <h5 class="card-title"><%= scooter.name %></h5>
-            <p class="card-text description"><%= scooter.description %></p>
             <p><strong>Rp <%= scooter.price %></strong></p>
             <p><%= scooter.status %></p>
+            <p class="card-text"><%= scooter.description %></p>
           </div>
           <div class="card-actions">
             <%= link_to "More info", scooter_path(scooter), class: 'action text-primary'  %>
