--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
   background: #FFB27C;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   height: 60px;
   padding: 0px 50px;
-  margin-top: -60px;
+  margin-top: 20em;
   color: rgba(0, 0, 0, 0.9);
   width: 100%;
   z-index: 1;
