--- a/app/views/scooters/show.html.erb
+++ b/app/views/scooters/show.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="desc-card">
-      <ul class="list-group" style="list-style: none;">
+      <ul class="list-group scoot-deets" style="list-style: none;">
         <li>
           <p><strong>Status</strong>: <%= @scooter.status %></p>
         </li>
