--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -104,20 +104,6 @@
   }
 }
 
-.own-scooter {
-  height: 150px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 4px;
-  border: 1px solid #C4C4C4;
-  .own-scooter-info {
-    margin-left: 20px;
-
-  }
-}
-
 .user-socials .list-inline > .socials > a {
   font-size: 32px;
   color: rgba(0, 0, 0, 0.5);
@@ -146,4 +132,12 @@
   position: absolute;
   top: 8px;
   right: 8px;
+}
+
+.scoot-deets {
+  overflow: hidden;
+}
+
+.scoot-details {
+  display: flex;
 }
