--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -16,12 +16,11 @@
             <strong>Rp <%= (b.scooter.price).to_i * days %></strong>
           </p>
           <p><%= b.scooter.description %></p>
-          <p id="price"></p>
         </div>
         <div class="card-product-actions">
           <h6 class="pb-3">
             <%= link_to edit_booking_path(b), class: 'log-in' do %>
-              <i class="fas fa-edit" style="color: #F9A468"></i>
+              <i class="fas fa-edit"></i>
             <% end %>
           </h6>
 
