scooter status changes

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -12,6 +12,7 @@
           <p>
             <%= b.start_date %> - <%= b.end_date %> (<strong><%= days = ((b.end_date - b.start_date) + 1).to_i %></strong> days)
           </p>
+          <p>Status: <strong><%= b.status %></strong></p>
           <p>
             <strong>Rp <%= (b.scooter.price).to_i * days %></strong>
           </p>
