--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="container">
-    <h1>rentscootscoot</h1>
+    <h1 id="banner-title">rentscootscoot</h1>
     <%= form_tag("/scooters", method: 'get') do %>
       <%= text_field_tag :search, nil, placeholder: "Search...", class: "form-control string required search-bar" %>
     <% end %>
