--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -38,3 +38,19 @@
   transform: scale(1.3);
 }
 
+@media only screen and (max-width: 480px) {
+  .footer {
+    margin-top: 5em;
+    padding: 0 25px;
+  }
+
+  .footer-copyright {
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .footer {
+    margin-top: 5em;
+  }
+}
