--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -46,3 +46,23 @@ form input {
 .rev-form {
   width: 600px;
 }
+
+@media only screen and (max-width: 480px) {
+  .new-scooter {
+    width: 90vw !important;
+    margin-top: 16px !important;
+    text-align: center;
+    h1 {
+      display: inline-block;
+      font-size: 32px;
+    }
+  }
+
+  form {
+    max-width: 90vw !important;
+  }
+
+  .scooter-photo {
+    text-align: center;
+  }
+}
