--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -95,3 +95,15 @@ h2 {
     text-decoration: none;
   }
 }
+
+@media only screen and (max-width: 480px) {
+  .main-container {
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .main-container {
+    flex-wrap: wrap;
+  }
+}
