--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -51,10 +51,6 @@
   }
 }
 
-.acc-settings {
-
-}
-
 .user-avatar {
   margin-top: -120px;
   margin-bottom: 20px;
@@ -140,4 +136,37 @@
 
 .scoot-details {
   display: flex;
+}
+
+@media only screen and (max-width: 480px) {
+  .user-profile {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .user-card {
+    display: grid;
+    margin-top: 80px;
+    grid-template-rows: 100px 50px;
+    width: 90vw;
+    height: 300px;
+  }
+
+  .acc-settings {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .user-avatar > img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .user-content {
+    width: 90vw;
+    img {
+      width: 80px;
+      height: 80px;
+    }
+  }
 }
