--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,7 +5,7 @@
   align-items: center;
   height: 60px;
   padding: 0px 50px;
-  margin-top: 20em;
+  // margin-top: 20em;
   color: rgba(0, 0, 0, 0.9);
   width: 100%;
   z-index: 1;
