--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,12 +18,14 @@
   </div>
 </div>
 
-<div class="container" id="about-us">
-  <h1 id="about-title">About us</h1>
-  <p>When you book a bike with Rentscootscoot you can be sure that you rent a motorbike or scooter with the most trustworthy scooter and bike rental company worldwide. The customer experience is the same irregardless if you use our service in Bali. Our professional employees truly care and are dedicated to making your life and travel experience easier and more comfortable.</p>
-  <p>By partnering with local bike rentals and supplying them with all the tools that we developed over the years, we offer tourists all over the world a fun, safe and well organised experience when renting a bike.</p>
+  <div class="m-4">
+    <div class="container" id="about-us">
+      <h1 id="about-title">About us</h1>
+      <p>When you book a bike with Rentscootscoot you can be sure that you rent a motorbike or scooter with the most trustworthy scooter and bike rental company worldwide. The customer experience is the same irregardless if you use our service in Bali. Our professional employees truly care and are dedicated to making your life and travel experience easier and more comfortable.</p>
+      <p>By partnering with local bike rentals and supplying them with all the tools that we developed over the years, we offer tourists all over the world a fun, safe and well organised experience when renting a bike.</p>
+    </div>
   <hr>
-  <div class="container">
+
   <h2 class="text-one"> Easy as <span style="color:#0E0000">1, 2, 3 ... </span></h2>
 
   <div class="card-description">
@@ -40,9 +42,8 @@
       <p>Discover breathtaking sceneries and vibrant cities. Just leave the bike for us to pick up by the end of your adventure.</p>
     </div>
   </div>
-
-  </div>
   <hr>
+
   <div class="list-group-item col-xs-12 nopadding_side", id="contact-us">
     <ul>
       <li><i class="fas fa-map-marker-alt"></i> Canggu, Bali</li>
