--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -79,28 +79,23 @@
   top: 8px;
 }
 
-#contact-us ul {
-  margin: 0;
-  padding:0;
-  list-style-type: none;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between
+// #contact-us ul {
+//   margin: 0;
+//   padding:0;
+//   list-style-type: none;
+//   text-align: center;
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   justify-content: space-between
 
-}
+// }
 
-#contact-us ul li {
-  display: inline;
-}
+// #contact-us ul li {
+//   display: inline;
+// }
 
-#about-title {
-  text-align: center;
-  font-size: 30px;
-}
-
-.text-one {
-  text-align: center;
-  font-size: 28px;
-}
+// #about-title {
+//   text-align: center;
+//   font-size: 30px;
+// }
