--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,10 +31,12 @@ h2 {
   color: #FFB27C;
   font-family: Roboto;
   font-weight: bold;
+  text-align: center;
+  font-size: 28px;
 }
 
 .card-item {
-  color: #484848;
+  color: #0E0000;
   font-family: Roboto;
   padding-top: 20px;
   padding-left: 20px;
@@ -52,6 +54,27 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+}
+
+#contact-us ul {
+  margin: 0;
+  padding:0;
+  list-style-type: none;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between
+
+}
+
+#contact-us ul li {
+  display: inline;
+}
+
+#about-title {
+  text-align: center;
+  font-size: 30px;
 }
 
 .btn-description {
