--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -162,6 +162,12 @@
     height: 80px;
   }
 
+  .name-card {
+    img {
+      width: 350px;
+    }
+  }
+
   .user-content {
     width: 90vw;
     img {
