--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,8 +16,8 @@
           <%= link_to "add a scooter", new_scooter_path, class: 'nav-link' %>
         </li>
         <li class="nav-item dropdown">
-          <% if @user.avatar.present? %>
-            <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+          <% if current_user.avatar.present? %>
+            <%= cl_image_tag current_user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
           <% else %>
             <%= image_tag "http://diazworld.com/images/avatar-placeholder.png", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
           <% end %>
