--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,7 +6,12 @@
   position: fixed;
   z-index: 1;
   width: 100%;
-  padding: 4px 0;
+
+}
+
+.container-nav {
+  width: 100%;
+
 }
 
 .navbar-lewagon .navbar-collapse {
