--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>rentscootscoot</h1>
     <%= form_tag("/scooters", method: 'get') do %>
-      <%= text_field_tag :search, nil, placeholder: "Search...", class: "form-control string required search-bar" %>
+      <%= text_field_tag :search, nil, placeholder: "search...", class: "form-control string required search-bar" %>
     <% end %>
     <ul class="actions">
       <li>
