--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -13,6 +13,10 @@
   top: 0;
   min-width: 600px;
   margin: 0 8px 8px 5em;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, .2);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
   border-radius: 3px;
+}
+
+.mapboxgl-ctrl {
+  display: none;
 }
