--- a/app/views/scooters/show.html.erb
+++ b/app/views/scooters/show.html.erb
@@ -3,80 +3,81 @@
 </div>
 
 <div class="container show-list">
-  <div class="scoot">
-    <div
-      id="map"
-      class="mb-3"
-      style="width: 100%;
-      height: 600px; box-shadow: 10px 10px 10px rgba(0, 0, 0, .2)"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    ></div>
-  </div>
-
-  <div class="details text-center">
-    <div class="name-card">
-      <h1 class="border-bottom"><%= @scooter.name %></h1>
-      <%= cl_image_tag @scooter.photo, crop: :fill, width: 400, height: 300 %>
-      <div class="destroy-scoot">
-        <i class="fas fa-trash" style="color: orange; font-size: 24px;"></i>
-      </div>
+  <div class="main-container">
+    <div class="scoot">
+      <div
+        id="map"
+        class="mb-3"
+        style="height: 70vh; overflow: visible !important"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+      ></div>
     </div>
 
-    <div class="desc-card">
-      <ul class="list-group scoot-deets" style="list-style: none;">
-        <li>
-          <p><strong>Status</strong>: <%= @scooter.status %></p>
-        </li>
-        <li>
-          <p><strong>Description</strong>: <%= @scooter.description %></p>
-        </li>
-        <li>
-          <ul class="list-inline">
-            <li class="list-inline-item">
-              <strong>Price / day</strong>
-            </li>
-            <li class="list-inline-item" style="margin-right: 0 !important">
-              <p>: Rp.</p>
-            </li>
-            <li class="list-inline-item">
-              <p id="scoot-price"><%= @scooter.price %></p>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-
-    <% if @user != @scooter.user && @scooter.status == 'Available' %>
-      <div class="booking-card">
-        <div class="container mt-3">
-          <h3 class="border-bottom">Booking Details</h3>
-          <p id="days"></p>
+    <div class="details ">
+      <div class="name-card">
+        <h1 class="scoot-name", style="margin: 0; color: black; font-weight: lighter; text-align: left;"><%= @scooter.name %></h1>
+        <%= cl_image_tag @scooter.photo, class: "card-photo", crop: :fill, width: 200, height: 200 %>
+        <div class="destroy-scoot">
+          <i class="fas fa-trash" style="color: orange; font-size: 24px;"></i>
         </div>
-          <%= render 'bookings/form' %>
-      </div>
-    <% end %>
-
-    <div class="review-card">
-      <div class="container mt-3">
-        <h3 class="border-bottom">Reviews</h3>
       </div>
 
-      <div class="reviews">
-        <% @scooter.reviews.each do |review| %>
-          <ul style="padding: 0; list-style: none;">
-            <li class="text-left">
-              <strong><%= review.booking.user.name %></strong> (<%= review.created_at %>):
-              <br>
-              <% review.rating.times do %>
-                <i class="fas fa-star" style="color: #F9A468"></i>
-              <% end %>
-              <% if review.content.present? %>
-                - <%= review.content %>
-              <% end %>
-            </li>
-          </ul>
-        <% end %>
+      <div class="desc-card">
+        <ul class="list-group scoot-deets" style="list-style: none;">
+          <li>
+            <p><strong>Status</strong>: <%= @scooter.status %></p>
+          </li>
+          <li>
+            <p><strong>Description</strong>: <%= @scooter.description %></p>
+          </li>
+          <li>
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <strong>Price / day</strong>
+              </li>
+              <li class="list-inline-item" style="margin-right: 0 !important">
+                <p>: Rp.</p>
+              </li>
+              <li class="list-inline-item">
+                <p id="scoot-price"><%= @scooter.price %></p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+
+      <% if @user != @scooter.user && @scooter.status == 'Available' %>
+        <div class="booking-card">
+          <div class="container mt-3">
+            <h3 class="border-bottom">Booking Details</h3>
+            <p id="days"></p>
+          </div>
+            <%= render 'bookings/form' %>
+        </div>
+      <% end %>
+
+      <div class="review-card">
+        <div class="container mt-3">
+          <h3 class="border-bottom">Reviews</h3>
+        </div>
+
+        <div class="reviews">
+          <% @scooter.reviews.each do |review| %>
+            <ul style="padding: 0; list-style: none;">
+              <li class="text-left">
+                <strong><%= review.booking.user.name %></strong> (<%= review.created_at %>):
+                <br>
+                <% review.rating.times do %>
+                  <i class="fas fa-star" style="color: #F9A468"></i>
+                <% end %>
+                <% if review.content.present? %>
+                  - <%= review.content %>
+                <% end %>
+              </li>
+            </ul>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
