--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,42 +1,45 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <a class="navbar-brand left-logo" href="/">
-    <i class="fas fa-motorcycle">&nbsp;</i>rentscootscoot
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="container-nav">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <% if user_signed_in? %>
-      <ul class="navbar-nav mr-auto right-btns">
-        <li class="nav-item">
-          <a class="nav-link" href="/bookings">my bookings</a>
-        </li>
-        <li class="nav-item">
-          <%= link_to "add a scooter", new_scooter_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item dropdown">
-          <% if @user.avatar.present? %>
-            <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
-          <% else %>
-            <%= image_tag "http://diazworld.com/images/avatar-placeholder.png", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
-          <% end %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "view profile", user_path(@user), class: 'dropdown-item'  %>
-            <a class="dropdown-item" href="#">settings</a>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      </ul>
-    <% else %>
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item mr-5">
-          <%= link_to "log in", new_user_session_path, class: 'btn log-in'  %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to "sign up", new_user_registration_path, class: 'btn sign-up' %>
-        </li>
-      </ul>
-    <% end %>
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+    <a class="navbar-brand left-logo" href="/">
+      <i class="fas fa-motorcycle">&nbsp;</i>rentscootscoot
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <% if user_signed_in? %>
+        <ul class="navbar-nav mr-auto right-btns">
+          <li class="nav-item">
+            <a class="nav-link" href="/bookings">my bookings</a>
+          </li>
+          <li class="nav-item">
+            <%= link_to "add a scooter", new_scooter_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item dropdown">
+            <% if @user.avatar.present? %>
+              <%= cl_image_tag @user.avatar, width: 36, height: 36, crop: :fit, g: :face, class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+            <% else %>
+              <%= image_tag "http://diazworld.com/images/avatar-placeholder.png", alt: "avatar" , class: 'avatar dropdown-toggle', id: 'navbarDropdown', aria: { haspopup: true, expanded: false }, data: { toggle: :dropdown } %>
+            <% end %>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <%= link_to "view profile", user_path(@user), class: 'dropdown-item'  %>
+              <a class="dropdown-item" href="#">settings</a>
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+            </div>
+          </li>
+        </ul>
+      <% else %>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item mr-5">
+            <%= link_to "log in", new_user_session_path, class: 'btn log-in'  %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to "sign up", new_user_registration_path, class: 'btn sign-up' %>
+          </li>
+        </ul>
+      <% end %>
+    </div>
   </div>
 </div>
